poke/testsuite/poke.pkl/mul-strings-diag-1.pk
/* { dg-do compile } */

defvar s = "foo" * "bar"; /* { dg-error "" } */
